--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QH'
 - !lcsh 'Snakes -- North America'
+- GITenberg
 title: Occurrence of the Garter Snake, Thamnophis sirtalis, in the Great Plains and
   Rocky Mountains
 url: http://www.gutenberg.org/ebooks/33966
